--- a/.github/workflows/main_apisas.yml
+++ b/.github/workflows/main_apisas.yml
@@ -21,7 +21,8 @@ jobs:
         with:
           dotnet-version: '8.x'
           include-prerelease: true
-          uses: zyactions/dotnet-restore@v1.1.0
+      - name: dotnet restoret
+        uses: actions/dotnet-restore@v1.1.0
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
