--- a/.github/workflows/main_apisas.yml
+++ b/.github/workflows/main_apisas.yml
@@ -21,7 +21,8 @@ jobs:
         with:
           dotnet-version: '8.x'
           include-prerelease: true
-
+      - name: .NET Restore
+        uses: zyactions/dotnet-restore@v1
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
