--- a/.github/workflows/main_apisas.yml
+++ b/.github/workflows/main_apisas.yml
@@ -21,8 +21,17 @@ jobs:
         with:
           dotnet-version: '8.x'
           include-prerelease: true
+      - name: Build with dotnet
+        run: dotnet build Document.Approval.sln --configuration Release
+
+      - name: dotnet publish
+        run: dotnet publish Document.Approval.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
+          
       - name: ZyAction:.NET Restore
         uses: zyactions/dotnet-restore@v1.1.0
+
+       
+  
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
