--- a/.github/workflows/main_apisas.yml
+++ b/.github/workflows/main_apisas.yml
@@ -21,8 +21,11 @@ jobs:
         with:
           dotnet-version: '8.x'
           include-prerelease: true
+
       - name: Build with dotnet
-        run: dotnet build Document.Approval.sln --configuration Release
+        run: |
+          cd src
+          dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish Document.Approval.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
