--- a/.github/workflows/main_apisas.yml
+++ b/.github/workflows/main_apisas.yml
@@ -26,10 +26,12 @@ jobs:
         run: dotnet restore
         working-directory: ChromaComics
       
+
       - name: Build with dotnet
         run: |
-          cd src
+          cd ChromaComics
           dotnet build --configuration Release
+
 
       - name: dotnet publish
         run: dotnet publish Document.Approval.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
