--- a/.github/workflows/main_apisas.yml
+++ b/.github/workflows/main_apisas.yml
@@ -28,13 +28,13 @@ jobs:
       
 
       - name: Build with dotnet
-        run: |
-          cd ChromaComics
-          dotnet build --configuration Release
+        run: dotnet build --configuration Release
+        working-directory: ChromaComics
 
 
       - name: dotnet publish
         run: dotnet publish Document.Approval.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        
           
       - name: ZyAction:.NET Restore
         uses: zyactions/dotnet-restore@v1.1.0
@@ -43,6 +43,7 @@ jobs:
   
       - name: Build with dotnet
         run: dotnet build --configuration Release
+        working-directory: ChromaComics
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
