--- a/.github/workflows/main_apisas.yml
+++ b/.github/workflows/main_apisas.yml
@@ -44,10 +44,15 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
         working-directory: ChromaComics
+      - name: List files
+        run: ls -R
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
         working-directory: ChromaComics
+      - name: List files
+        run: ls -R
+
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
