--- a/.github/workflows/main_apisas.yml
+++ b/.github/workflows/main_apisas.yml
@@ -33,7 +33,7 @@ jobs:
 
 
       - name: dotnet publish
-        run: dotnet publish Document.Approval.sln -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish Document.Approval.sln -c Release -o ${{env.DOTNET_ROOT}}/program
         
           
       - name: ZyAction:.NET Restore
