--- a/.github/workflows/main_apisas.yml
+++ b/.github/workflows/main_apisas.yml
@@ -32,8 +32,9 @@ jobs:
         working-directory: ChromaComics
 
 
-      - name: dotnet publish
-        run: dotnet publish Document.Approval.sln -c Release -o ${{env.DOTNET_ROOT}}/program
+
+      - name: dotnet publish with profile
+        run: dotnet publish -p:PublishProfile=FolderProfile
         
           
       - name: ZyAction:.NET Restore
