feat(Payment): Fixed completed controller

--- a/ChromaComics/appsettings.json
+++ b/ChromaComics/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user=root;password=password;database=agroges1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
