--- a/ChromaComics/appsettings.json
+++ b/ChromaComics/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+  "DefaultConnection": "server=localhost;user=root;password=root;database=chromacomics"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
