--- a/ChromaComics/appsettings.json
+++ b/ChromaComics/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "Place here your secret for token generation"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=password;database=chroma-comics"
+    "DefaultConnection": "server=viaduct.proxy.rlwy.net;port=15163;user=root;password=LotWchJeHhdjvkekKziZxjWwBgLgcYfp;database=railway"
   },
   "Logging": {
     "LogLevel": {
