--- a/ChromaComics/ChromaComics.csproj
+++ b/ChromaComics/ChromaComics.csproj
@@ -22,4 +22,8 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Recommendations\Domain\Models\Recommendation.cs" />
+    </ItemGroup>
+
 </Project>
