--- a/ChromaComics/appsettings.json
+++ b/ChromaComics/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=password;database=agroges1"
+    "DefaultConnection": "server=localhost;user=root;password=SoyElPapi71264846;database=newconnect"
   },
   "Logging": {
     "LogLevel": {
